--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-# الأساسيات
-ccxt==4.2.6
-pandas==2.0.3
-numpy==1.24.3
 requests==2.31.0
+pandas==2.0.3
+matplotlib==3.7.2
+python-telegram-bot==20.5
 python-dotenv==1.0.0
-
-# التحليل الفني (البديل)
-ta==0.10.2
-
-# الويب والخدمات
+schedule==1.2.0
+cryptopanic==0.1.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
 flask==2.3.3
-pytz==2023.3
-
-# التحسينات
-python-decouple==3.8
-cachetools==5.3.1
-
-# التطوير والاختبار
-pytest==7.4.0
+gunicorn==21.2.0
