--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ matplotlib==3.7.2
 python-telegram-bot==20.5
 python-dotenv==1.0.0
 schedule==1.2.0
-cryptopanic==0.1.0
 beautifulsoup4==4.12.2
 lxml==4.9.3
 flask==2.3.3
 gunicorn==21.2.0
+aiohttp==3.9.3
