--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-requests==2.31.0
 pandas==1.5.3
-matplotlib==3.7.2
-python-telegram-bot==20.5
-python-dotenv==1.0.0
+numpy==1.21.6
+requests==2.28.2
+beautifulsoup4==4.11.2
+python-telegram-bot==20.3
+flask==2.2.3
 schedule==1.2.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
-flask==2.3.3
-gunicorn==21.2.0
-aiohttp==3.9.3
+aiohttp==3.8.4
