--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+python_version >= '3.9'
 pandas==1.5.3
-numpy==1.21.6
+numpy==1.23.5
 requests==2.28.2
-beautifulsoup4==4.11.2
-python-telegram-bot==20.3
-flask==2.2.3
+beautifulsoup4==4.12.2
+python-telegram-bot==20.7
+flask==2.3.3
 schedule==1.2.0
-aiohttp==3.8.4
+aiohttp==3.8.5
+lxml==4.9.3
