--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+python-binance==1.0.10
 pandas==1.5.3
-numpy==1.23.5
+numpy==1.24.3
 requests==2.28.2
-beautifulsoup4==4.12.2
 python-telegram-bot==20.7
-flask==2.3.3
-schedule==1.2.0
-aiohttp==3.8.5
-lxml==4.9.3
+python-dotenv==0.19.0
+aiohttp==3.8.4
+flask>=2.0.0
