--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-python-binance==1.0.10
-pandas==1.5.3
+fastapi==0.104.1
+uvicorn==0.24.0
+httpx==0.25.2
+pandas==2.1.4
 numpy==1.24.3
-requests==2.28.2
-python-telegram-bot==20.7
-python-dotenv==0.19.0
-aiohttp==3.8.4
-flask>=2.0.0
-pymongo==4.5.0
-redis==4.6.0
+python-dotenv==1.0.0
