--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ httpx==0.25.2
 pandas==2.1.4
 numpy==1.24.3
 python-dotenv==1.0.0
+aiohttp==3.9.1
+matplotlib==3.8.2
+seaborn==0.13.0
+requests==2.31.0
+python-multipart==0.0.6
