--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-httpx==0.25.2
-pandas==2.1.4
-numpy==1.24.3
+pandas==1.5.3
+numpy==1.21.6
+requests==2.28.2
+pyTelegramBotAPI==4.12.0
 python-dotenv==1.0.0
-aiohttp==3.9.1
-matplotlib==3.8.2
-seaborn==0.13.0
-requests==2.31.0
-python-multipart==0.0.6
