--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
+# الأساسيات والبيانات
+pyTelegramBotAPI==4.14.0
 pandas==1.5.3
-numpy==1.24.3
-requests==2.31.0
-python-telegram-bot==20.7
+numpy==1.21.6
 python-dotenv==1.0.0
-matplotlib==3.7.2
-tenacity==8.2.3
-schedule==1.2.0
-pytelegrambotapi==4.14.0
-fastapi==0.104.1
+requests==2.28.2
+pytz==2022.7
 
+# الويب والخوادم
+httpx==0.24.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+
+# الرسوميات والتحليل
+matplotlib==3.7.1
+
+# أدوات مساعدة
+tenacity==8.2.2
